pingpong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP  
  selector:
    app: pingpong 
  ports:
    - port: 1235 # Port exposed outside the cluster
      protocol: TCP
      targetPort: 4001 # Container's actual listening port
